--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch server.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.294.0",
     "aws-sdk": "^2.1305.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
